--- a/environment.yml
+++ b/environment.yml
@@ -2,21 +2,19 @@ name: fiap_tsp
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2024.9.24=haa95532_0
-  - git=2.45.2=haa95532_1
-  - libffi=3.4.4=hd77b12b_1
-  - openssl=3.0.15=h827c3e9_0
-  - pip=24.2=py39haa95532_0
-  - python=3.9.19=h1aa4202_1
-  - setuptools=75.1.0=py39haa95532_0
-  - sqlite=3.45.3=h2bbff1b_0
-  - tk=8.6.14=h0416ee5_0
-  - vc=14.40=h2eaa2aa_1
-  - vs2015_runtime=14.40.33807=h98bb1dd_1
-  - wheel=0.44.0=py39haa95532_0
-  - xz=5.4.6=h8cc25b3_1
-  - zlib=1.2.13=h8cc25b3_1
+  - bzip2=1.0.8
+  - ca-certificates=2024.9.24
+  - git=2.45.2
+  - libffi=3.4.4
+  - openssl=3.0.15
+  - pip=24.2
+  - python=3.9.19
+  - setuptools=75.1.0
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - wheel=0.44.0
+  - xz=5.4.6
+  - zlib=1.2.13
   - pip:
       - altair==5.4.1
       - attrs==24.2.0
